Created the values for initial microservice and adjusted the deployment template